--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=walee_utells_db
+DB_USERNAME=walee
+DB_PASSWORD=walee
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
